Ya esta Validado lo que es los errores en las explesiones regulares

--- a/Proyecto2Automatas/nbproject/project.properties
+++ b/Proyecto2Automatas/nbproject/project.properties
@@ -30,13 +30,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.automaton.jar=automaton.jar
+file.reference.RojeruSan.parte1.jar=C:\\Users\\mynor\\OneDrive\\Librerias externas\\lib\\Libs\\Jars\\RojeruSan.parte1.jar
+file.reference.RSDate.jar=C:\\Users\\mynor\\OneDrive\\Librerias externas\\lib\\Libs\\Jars\\RSDate.jar
 file.reference.RSTableMetro.jar=C:\\Users\\mynor\\OneDrive\\Librerias externas\\lib\\Libs\\Jars\\RSTableMetro.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.RSTableMetro.jar}:\
-    ${file.reference.automaton.jar}
+    ${file.reference.automaton.jar}:\
+    ${file.reference.RojeruSan.parte1.jar}:\
+    ${file.reference.RSDate.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
